Ability to attach User/Invitation management to other resources than Store (#12660)
* Ability to connect Invitations for other resources than Store

eg. Vendor

* fix nav link

* Update routes.rb

* Ability to attach user management to other resources than Store

* Update admin/spec/controllers/spree/admin/resource_users_controller_spec.rb

Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

* fixes

* Update roles_controller.rb

* fixes

* fix

* Update invitations_controller.rb

* Update admin_users_controller_spec.rb

* Update _invitation.html.erb

* fixes

* Update base_helper.rb

* Update resource_user.rb

---------

Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

--- a/admin/app/views/spree/admin/admin_users/edit.html.erb
+++ b/admin/app/views/spree/admin/admin_users/edit.html.erb
@@ -1,5 +1,5 @@
 <% content_for :page_title do %>
-  <%= page_header_back_button spree.admin_admin_users_path, @admin_user %>
+  <%= page_header_back_button spree.admin_admin_users_path %>
   <%= @admin_user.name %>
 <% end %>
 
@@ -18,11 +18,11 @@
     <div class="card-body">    
       <%= render'spree/admin/shared/error_messages', target: @admin_user %>
       <%= render 'form', f: f %>
-      <% if can?(:manage, Spree::Role) %>
+      <% if can?(:manage, Spree::Role) && @roles.any? %>
         <div class="form-group">
           <%= f.label :spree_role_ids, Spree.t(:roles) %>
           <%= f.select :spree_role_ids,
-                  options_from_collection_for_select(Spree::Role.all, 'id', 'name', @admin_user.spree_roles.pluck(:id)),
+                  options_from_collection_for_select(@roles, 'id', 'name', @admin_user.spree_roles.pluck(:id)),
                   { prompt: false },
                   { multiple: true,  data: { controller: 'autocomplete-select' } } %>          
         </div>
