--- a/storefront/app/views/spree/line_items/destroy.turbo_stream.erb
+++ b/storefront/app/views/spree/line_items/destroy.turbo_stream.erb
@@ -1,6 +1,5 @@
 <%= turbo_stream.replace_all '.cart-contents' do %>
-  <% cart_id = "cart-contents#{@order.present? ? "-#{@order.id}-#{@order.updated_at.to_i}" : ""}" %>
-  <%= turbo_frame_tag cart_id, class: 'cart-contents' do %>
+  <%= turbo_frame_tag cart_id(@order), class: 'cart-contents' do %>
     <% if @order.line_items.empty? %>
       <%= render 'spree/orders/empty' %>
     <% else %>
