--- a/storefront/app/views/themes/default/spree/orders/edit.html.erb
+++ b/storefront/app/views/themes/default/spree/orders/edit.html.erb
@@ -5,8 +5,7 @@
 
   <%= render 'spree/shared/error_messages', target: @order %>
 
-  <% cart_id = "cart-contents#{current_order.present? ? "-#{current_order.id}-#{current_order.updated_at.to_i}" : ""}" %>
-  <%= turbo_frame_tag cart_id, class: 'cart-contents' do %>
+  <%= turbo_frame_tag cart_id(@order), class: 'cart-contents' do %>
     <% if !@line_items || @line_items.empty? %>
       <%= render 'spree/orders/empty' %>
     <% else %>
