--- a/storefront/app/views/themes/default/spree/shared/_cart_pane.html.erb
+++ b/storefront/app/views/themes/default/spree/shared/_cart_pane.html.erb
@@ -31,8 +31,7 @@
       </span>
     </div>
     <div class='flex-1 h-0 overflow-y-auto'>
-      <% cart_id = "cart-contents#{current_order.present? ? "-#{current_order.id}-#{current_order.updated_at.to_i}" : ""}" %>
-      <%= turbo_frame_tag cart_id, class: 'cart-contents', src: spree.cart_path, data: { turbo_permanent: true } %>
+      <%= turbo_frame_tag cart_id(current_order), class: 'cart-contents', src: spree.cart_path, data: { turbo_permanent: true } %>
     </div>
   </div>
 </div>
