--- a/storefront/app/views/spree/line_items/destroy.turbo_stream.erb
+++ b/storefront/app/views/spree/line_items/destroy.turbo_stream.erb
@@ -1,5 +1,5 @@
 <%= turbo_stream.replace_all '.cart-contents' do %>
-  <%= turbo_frame_tag :cart_contents, class: 'cart-contents' do %>
+  <%= turbo_frame_tag cart_id(@order), class: 'cart-contents' do %>
     <% if @order.line_items.empty? %>
       <%= render 'spree/orders/empty' %>
     <% else %>
