--- a/storefront/app/views/spree/line_items/update.turbo_stream.erb
+++ b/storefront/app/views/spree/line_items/update.turbo_stream.erb
@@ -2,7 +2,7 @@
   <%= spree_turbo_update_flashes %>
 <% else %>
   <%= turbo_stream.replace_all '.cart-contents' do %>
-    <%= turbo_frame_tag :cart_contents, class: 'cart-contents' do %>
+    <%= turbo_frame_tag cart_id(@order), class: 'cart-contents' do %>
       <%= render 'spree/orders/cart' %>
     <% end %>
   <% end %>
