--- a/storefront/app/views/themes/default/spree/orders/edit.html.erb
+++ b/storefront/app/views/themes/default/spree/orders/edit.html.erb
@@ -5,7 +5,7 @@
 
   <%= render 'spree/shared/error_messages', target: @order %>
 
-  <%= turbo_frame_tag :cart_contents, class: 'cart-contents' do %>
+  <%= turbo_frame_tag cart_id(@order), class: 'cart-contents' do %>
     <% if !@line_items || @line_items.empty? %>
       <%= render 'spree/orders/empty' %>
     <% else %>
