--- a/storefront/app/views/themes/default/spree/shared/_cart_pane.html.erb
+++ b/storefront/app/views/themes/default/spree/shared/_cart_pane.html.erb
@@ -31,7 +31,7 @@
       </span>
     </div>
     <div class='flex-1 h-0 overflow-y-auto'>
-      <%= turbo_frame_tag :cart_contents, class: 'cart-contents', src: spree.cart_path, loading: :lazy %>
+      <%= turbo_frame_tag cart_id(current_order), class: 'cart-contents', src: spree.cart_path, data: { turbo_permanent: true } %>
     </div>
   </div>
 </div>
