--- a/admin/app/views/spree/admin/stock_locations/index.html.erb
+++ b/admin/app/views/spree/admin/stock_locations/index.html.erb
@@ -14,7 +14,9 @@
             <th><%= Spree.t(:name) %></th>
             <th><%= Spree.t(:country) %></th>
             <th><%= Spree.t(:active) %>?</th>
-            <th><%= Spree.t(:default) %>?</th>
+            <% if can?(:mark_as_default, Spree::StockLocation) %>
+              <th><%= Spree.t(:default) %>?</th>
+            <% end %>
             <th></th>
           </tr>
         </thead>
