--- a/admin/app/views/spree/admin/stock_locations/_stock_location.html.erb
+++ b/admin/app/views/spree/admin/stock_locations/_stock_location.html.erb
@@ -7,13 +7,15 @@
   <td data-action="click->row-link#openLink">
     <%= active_badge(stock_location.active?) %>
   </td>
-  <td data-action="click->row-link#openLink"><%= active_badge(stock_location.default?) %></td>
+  <% if can?(:mark_as_default, Spree::StockLocation) %>
+    <td data-action="click->row-link#openLink"><%= active_badge(stock_location.default?) %></td>
+  <% end %>
   <td class="actions">
     <% if can? :edit, stock_location %>
       <div class="d-flex justify-content-end align-items-center">
         <div><%= link_to_edit stock_location, data: { row_link_target: 'link' } %></div>
 
-        <% unless stock_location.default? %>
+        <% if !stock_location.default? && can?(:mark_as_default, Spree::StockLocation) %>
           <div class="dropdown">
             <button class="btn btn-sm btn-light h-100" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <%= icon('dots', class: 'mr-0') %>
