Simplify user management
Drop the custom `ResourceUser` model
Gracefully extend existing `RoleUser` model

--- a/admin/app/views/spree/admin/invitations/_invitation.html.erb
+++ b/admin/app/views/spree/admin/invitations/_invitation.html.erb
@@ -10,9 +10,7 @@
     <% end %>
   </td>
   <td class="w-20">
-    <% invitation.roles.each do |role| %>
-      <span class="badge badge-light"><%= role.name %></span>
-    <% end %>
+    <span class="badge badge-light"><%= invitation.role.name %></span>
   </td>
   <td class="w-20">
     <% if invitation.accepted? %>
