--- a/admin/app/views/spree/admin/invitations/new.html.erb
+++ b/admin/app/views/spree/admin/invitations/new.html.erb
@@ -13,7 +13,7 @@
         <% if @roles.any? %>
           <div class="form-group">
             <%= f.label :role, Spree.t(:roles) %>
-            <%= f.select :role_ids, @roles.map { |role| [role.name, role.id] }, {}, { data: { controller: 'autocomplete-select', 'enable-button-target': 'input' }, multiple: true, required: true } %>
+            <%= f.select :role_id, @roles.map { |role| [role.name, role.id] }, {}, { data: { controller: 'autocomplete-select', 'enable-button-target': 'input' }, required: true } %>
           </div>
         <% end %>
         <div class="form-group">
