--- a/admin/app/views/spree/admin/shared/sidebar/_integrations_nav.html.erb
+++ b/admin/app/views/spree/admin/shared/sidebar/_integrations_nav.html.erb
@@ -1,3 +1,5 @@
-<li class="nav-item">
-  <%= nav_item(Spree.t(:integrations), spree.admin_integrations_path, icon: 'plug') %>
-</li>
+<% if can?(:manage, Spree::Integration) %>
+  <li class="nav-item">
+    <%= nav_item(Spree.t(:integrations), spree.admin_integrations_path, icon: 'plug') %>
+  </li>
+<% end %>
