--- a/admin/app/views/spree/admin/shared/sidebar/_store_dropdown.html.erb
+++ b/admin/app/views/spree/admin/shared/sidebar/_store_dropdown.html.erb
@@ -65,7 +65,7 @@
       <%= icon 'plus', class: 'mr-0' %>
     </button>
     <div class="dropdown-menu">
-      <%= link_to_with_icon 'shopping-bag-plus', Spree.t(:new_order), spree.admin_orders_path, class: "dropdown-item", data: { turbo_method: :post } if can?(:create, Spree::Order)  %>
+      <%= link_to_with_icon 'shopping-bag-plus', Spree.t(:new_order), spree.admin_orders_path, class: "dropdown-item", data: { turbo_method: :post } if can?(:manage, Spree::Order)  %>
 
       <%= link_to spree.new_admin_product_path, class: 'dropdown-item' do %>
         <%= icon 'cube-plus' %>
@@ -74,7 +74,7 @@
       <%= link_to spree.new_admin_user_path, class: 'dropdown-item' do %>
         <%= icon 'user-plus' %>
         <%= Spree.t(:new_customer) %>
-      <% end if can?(:create, Spree.user_class) %>
+      <% end if can?(:manage, Spree.user_class) %>
 
       <%= link_to spree.new_admin_promotion_path, class: 'dropdown-item' do %>
         <%= icon 'discount' %>
