fixed translations, fixed stores controller spec

--- a/admin/app/views/spree/admin/invitations/new.html.erb
+++ b/admin/app/views/spree/admin/invitations/new.html.erb
@@ -12,7 +12,7 @@
         </div>
         <% if @roles.any? %>
           <div class="form-group">
-            <%= f.label :role, Spree.t(:role) %>
+            <%= f.label :role, Spree.t(:role_id) %>
             <%= f.select :role_id, @roles.map { |role| [role.name, role.id] }, {}, { data: { controller: 'autocomplete-select', 'enable-button-target': 'input' }, required: true } %>
           </div>
         <% end %>
