--- a/admin/app/views/spree/admin/invitations/index.html.erb
+++ b/admin/app/views/spree/admin/invitations/index.html.erb
@@ -7,7 +7,7 @@
       <tr>
         <th class="rounded-lg-top-left"><%= Spree.t(:email) %></th>
         <th><%= I18n.t('activerecord.attributes.spree/invitation.inviter') %></th>
-        <th><%= Spree.t(:roles) %></th>
+        <th><%= Spree.t(:role_id) %></th>
         <th><%= Spree.t(:status) %></th>
         <th class="rounded-lg-top-right"><%= sort_link @search, :created_at, Spree.t(:created_at) %></th>
         <th></th>
