Simplify user management  (#12669)
Drop the custom `ResourceUser` model
Gracefully extend existing `RoleUser` model

* fixed invitations form

* fixed admin users controller spec

* Add more model specs, remove duplicated specs

* extend `spree_admin?` method to check against resource

* added missing validations to `RoleUser`

* improve `UserRoles` concern

--- a/admin/app/views/spree/admin/invitations/new.html.erb
+++ b/admin/app/views/spree/admin/invitations/new.html.erb
@@ -12,8 +12,8 @@
         </div>
         <% if @roles.any? %>
           <div class="form-group">
-            <%= f.label :role, Spree.t(:roles) %>
-            <%= f.select :role_ids, @roles.map { |role| [role.name, role.id] }, {}, { data: { controller: 'autocomplete-select', 'enable-button-target': 'input' }, multiple: true, required: true } %>
+            <%= f.label :role, Spree.t(:role_id) %>
+            <%= f.select :role_id, @roles.map { |role| [role.name, role.id] }, {}, { data: { controller: 'autocomplete-select', 'enable-button-target': 'input' }, required: true } %>
           </div>
         <% end %>
         <div class="form-group">
