--- a/admin/app/assets/stylesheets/spree/admin/global/_variables.scss
+++ b/admin/app/assets/stylesheets/spree/admin/global/_variables.scss
@@ -18,10 +18,10 @@ $light: $gray-50 !default;
 
 $primary: #061932 !default;
 $black: #000000 !default;
-$blue: #0077ff !default;
+$blue: #0090FE !default;
 $white: #FFFFFF !default;
 
-$action: #f1faff !default;
+$action: #F4F9FF !default;
 $action-border: #e2ecff !default;
 
 $theme-colors: (
