--- a/admin/app/assets/stylesheets/spree/admin/global/_variables.scss
+++ b/admin/app/assets/stylesheets/spree/admin/global/_variables.scss
@@ -105,11 +105,11 @@ $box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),0 2px 4px -1px rgba(0, 0, 0, 0.06
 $box-shadow-xs: rgba(43, 34, 51, 0.04) 0px 1px 2px !default;
 $box-shadow-lg: rgba(0, 5, 13, 0.5) 0px 4px 8px 2px;
 
-$tooltip-border-radius: $border-radius-sm !default;
+$tooltip-border-radius: $border-radius !default;
 $tooltip-opacity: 1 !default;
 $tooltip-margin:                    0.25rem 0 !default;
-$tooltip-padding-y:                 .5rem !default;
-$tooltip-padding-x:                 .75rem !default;
+$tooltip-padding-y:                 .25rem !default;
+$tooltip-padding-x:                 .5rem !default;
 $tooltip-bg: $white !default;
 $tooltip-color: $body-color !default;
 $tooltip-arrow-color: transparent !default;
