Improve UX of tooltips, bulk operations, sortable

--- a/admin/app/assets/stylesheets/spree/admin/components/_buttons.scss
+++ b/admin/app/assets/stylesheets/spree/admin/components/_buttons.scss
@@ -64,38 +64,38 @@ button[disabled]        .show-when-enabled { display: none; }
 
 .btn-hover {
   &:hover, &:focus {
-    text-decoration: none !important;
-    background-color: $gray-50 !important;
+    text-decoration: none;
+    background-color: $gray-50;
   }
 }
 .hover-light {
   &:hover, &:focus {
-    background-color: $gray-25 !important;
-    text-decoration: none !important;
+    background-color: $gray-25;
+    text-decoration: none;
   }
 }
 .hover-gray {
   &:hover, &:focus {
-    background-color: $gray-100 !important;
-    text-decoration: none !important;
+    background-color: $gray-100;
+    text-decoration: none;
   }
 }
 .hover-gray-50 {
   &:hover, &:focus {
-    background-color: $gray-50 !important;
-    text-decoration: none !important;
+    background-color: $gray-50;
+    text-decoration: none;
   }
 }
 .hover-gray-200 {
   &:hover, &:focus {
-    background-color: $gray-200 !important;
-    text-decoration: none !important;
+    background-color: $gray-200;
+    text-decoration: none;
   }
 }
 .hover-primary {
   &:hover, &:focus {
-    background-color: theme-color('black') !important;
-    text-decoration: none !important;
+    background-color: theme-color('black');
+    text-decoration: none;
   }
 }
 
