--- a/admin/app/views/spree/admin/payments/_payment.html.erb
+++ b/admin/app/views/spree/admin/payments/_payment.html.erb
@@ -16,7 +16,7 @@
 
     <div class="dropdown">
       <button class="btn btn-light btn-sm" type="button" data-toggle="dropdown" aria-expanded="false">
-        <%= icon('dots', class: 'mr-0') %>
+        <%= icon('dots-vertical', class: 'mr-0') %>
       </button>
       <div class="dropdown-menu">
         <% if payment.try(:gateway_dashboard_payment_url).present? %>
