--- a/admin/app/assets/stylesheets/spree/admin/components/_bulk_panel.scss
+++ b/admin/app/assets/stylesheets/spree/admin/components/_bulk_panel.scss
@@ -7,7 +7,11 @@
   box-shadow: $dropdown-box-shadow;
   animation: bounceInUp;
   animation-duration: 0.5s;
-  gap: 0.75rem;
+  gap: 0.5rem;
+
+  .btn {
+    height: 2rem;
+  }
 }
 
 #bulk-panel {
@@ -38,4 +42,7 @@
   align-items: center;
   justify-content: center;
   gap: 0.25rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  border-left: 1px solid $gray-50;
 }
