--- a/admin/app/views/spree/admin/products/_bulk_operations.html.erb
+++ b/admin/app/views/spree/admin/products/_bulk_operations.html.erb
@@ -25,7 +25,7 @@
         data-toggle="dropdown"
         aria-expanded="false"
       >
-        <%= icon("dots", class: "mr-0") %>
+        <%= icon('dots-vertical', class: "mr-0") %>
       </button>
       <div
         class="dropdown-menu dropdown-menu-left"
