--- a/admin/app/views/spree/admin/shared/_content_header.html.erb
+++ b/admin/app/views/spree/admin/shared/_content_header.html.erb
@@ -30,7 +30,7 @@
       <% if show_record_subtitle || content_for(:page_actions_dropdown) %>
         <div class="dropdown h-100" id="page_actions_dropdown">
           <%= link_to '#', class: 'btn btn-light bg-transparent h-100 p-2', data: { toggle: 'dropdown' }, id: 'more-actions-link' do %>
-            <%= icon 'dots', class: 'mr-0' %>
+            <%= icon 'dots-vertical', class: 'mr-0' %>
           <% end %>
           <div class="dropdown-menu dropdown-menu-right">
             <%= yield :page_actions_dropdown if content_for(:page_actions_dropdown) %>
