--- a/admin/app/views/spree/admin/shared/_user_dropdown.html.erb
+++ b/admin/app/views/spree/admin/shared/_user_dropdown.html.erb
@@ -1,15 +1,20 @@
 <% if try_spree_current_user.present? %>
   <div class="dropdown py-2 bg-gray-25 border-top" id="<%= dom_id(try_spree_current_user, 'account-dropdown') %>" data-turbo-permanent>
     <button type="button"
-          class="btn d-flex align-items-center justify-content-between text-left w-100"
+          class="btn d-flex align-items-center justify-content-between text-left w-100 pr-0"
           data-toggle="dropdown" aria-expanded="false" id="accountNav">
       <div class="d-flex align-items-center">
         <%= render_avatar(try_spree_current_user, width: 34, height: 34) %>
         <span class="d-none d-lg-inline ml-lg-2">
-          <%= try_spree_current_user.name&.full&.truncate(15)&.presence || try_spree_current_user.email.truncate(15) %><br />
-          <span class="text-muted small"><%= try_spree_current_user.email.truncate(22) %></span>
+          <% if try_spree_current_user.name.present? %>
+            <%= try_spree_current_user.name&.full&.truncate(12)&.presence %><br />
+            <span class="small"><%= try_spree_current_user.email.truncate(17) %></span>
+          <% else %>
+            <%= try_spree_current_user.email.truncate(12) %><br />
+          <% end %>
         </span>
       </div>
+      <%= icon('dots-vertical', class: 'ml-auto text-muted') %>
     </button>
     <div class="dropdown-menu dropdown-menu-right w-100 mb-1 mt-1 mt-lg-0">
       <% if can?(:update, try_spree_current_user) %>
