--- a/admin/app/views/spree/admin/themes/_theme.html.erb
+++ b/admin/app/views/spree/admin/themes/_theme.html.erb
@@ -38,7 +38,7 @@
         <%= link_to Spree.t('actions.publish'), publish_admin_theme_path(theme), class: 'btn btn-sm btn-light mr-2', data: { turbo_method: :put } unless theme.default? %>
         <div class="dropdown">
           <button class="btn btn-sm btn-light h-100" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <%= icon('dots', class: 'mr-0') %>
+            <%= icon('dots-vertical', class: 'mr-0') %>
           </button>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
             <%= link_to_edit theme, class: 'dropdown-item' %>
