--- a/admin/app/views/spree/admin/pages/index.html.erb
+++ b/admin/app/views/spree/admin/pages/index.html.erb
@@ -12,8 +12,10 @@
       <table class="table">
         <thead>
           <tr>
-            <th><%= Spree.t(:name) %></th>
-            <th><%= Spree.t(:updated_at) %></th>
+            <th><%= sort_link @search, :name, Spree.t(:name) %></th>
+            <th><%= sort_link @search, :created_at, Spree.t(:created_at) %></th>
+            <th><%= sort_link @search, :updated_at, Spree.t(:updated_at) %></th>
+            <th></th>
           </tr>
         </thead>
         <tbody>
