--- a/admin/app/views/spree/admin/post_categories/index.html.erb
+++ b/admin/app/views/spree/admin/post_categories/index.html.erb
@@ -10,7 +10,8 @@
       <table class="table">
         <thead>
           <tr>
-            <th class="w-90"><%= Spree.t(:title) %></th>
+            <th><%= Spree.t(:title) %></th>
+            <th><%= Spree.t(:posts) %></th>
             <th></th>
           </tr>
         </thead>
