--- a/admin/app/views/spree/admin/posts/index.html.erb
+++ b/admin/app/views/spree/admin/posts/index.html.erb
@@ -13,10 +13,10 @@
       <table class="table">
         <thead>
           <tr>
-            <th><%= Spree.t(:title) %></th>
+            <th><%= sort_link @search, :title, Spree.t(:title) %></th>
             <th><%= Spree.t(:category) %></th>
             <th><%= Spree.t(:author) %></th>
-            <th><%= Spree.t(:published_at) %></th>
+            <th><%= sort_link @search, :published_at, Spree.t(:published_at) %></th>
             <th></th>
           </tr>
         </thead>
