Add ability to register custom page sections per theme

--- a/storefront/lib/generators/spree/storefront/theme/templates/model.rb.tt
+++ b/storefront/lib/generators/spree/storefront/theme/templates/model.rb.tt
@@ -7,6 +7,12 @@ module Spree
           license: 'MIT',
         }
       end
+
+      def custom_page_sections
+        # you can override this method in your theme to return a list of custom page sections for your theme
+        # [Spree::PageSections::Custom, Spree::PageSections::Custom2]
+        []
+      end
     end
   end
 end
