--- a/storefront/app/views/themes/default/spree/account/addresses/_edit_address_modal.html.erb
+++ b/storefront/app/views/themes/default/spree/account/addresses/_edit_address_modal.html.erb
@@ -1,17 +1,19 @@
-<div class="card-dialog mx-auto lg:w-1/3 bg-white">
-  <div class="px-8 py-6">
-    <div class="flex justify-between items-center mb-4">
-      <h3 class="text-xl lg:text-2xl font-medium lg:font-semibold capitalize">
-        <%= Spree.t(:edit_address) %>
-      </h3>
-      <button data-action="click->modal#close" class="ml-4">
-        <%= render 'spree/shared/icons/close' %>
-        <span class="sr-only"><%= Spree.t(:close) %></span>
-      </button>
+<div class="bg-white h-[90vh] lg:h-[70vh] w-full lg:w-1/3 flex flex-col overflow-hidden">
+  <%= form_for @address, method: :put, html: { class: "flex flex-col h-full" } do |f| %>
+    <div class="px-8 py-6 border-b shrink-0">
+      <div class="flex justify-between items-center">
+        <h3 class="text-xl lg:text-2xl font-medium lg:font-semibold capitalize">
+          <%= Spree.t(:edit_address) %>
+        </h3>
+        <button data-action="click->modal#close" class="ml-4">
+          <%= render 'spree/shared/icons/close' %>
+          <span class="sr-only"><%= Spree.t(:close) %></span>
+        </button>
+      </div>
+      <%= render 'spree/shared/error_messages', target: @address, class: 'alert-error text-center mt-4 p-2' %>
     </div>
-    <%= render 'spree/shared/error_messages', target: @address %>
-    <%= form_for @address, method: :put do |f| %>
-      <div class="border-t border-default py-4 text-left">
+    <div class="overflow-y-auto px-8 py-2 grow">
+      <div class="py-4 text-left">
         <%= render 'spree/addresses/form',
           address_name: 'address',
           address_form: f,
@@ -19,21 +21,17 @@
           address: @address %>
       </div>
       <%= label_tag "default_shipping", class: "flex items-center gap-2 text-sm mb-4" do %>
-        <%= check_box_tag "default_shipping", "true", @address.user_default_shipping?,
-          class: 'input-checkbox input-address-default',
-          disabled: @address.user_default_shipping? %>
-        Set as default delivery address
+        <%= check_box_tag "default_shipping", "true", @address.user_default_shipping?, class: 'input-checkbox input-address-default', disabled: @address.user_default_shipping? %>
+        <%= Spree.t('address_book.set_as_default_delivery_address') %>
       <% end %>
       <%= label_tag "default_billing", class: "flex items-center gap-2 text-sm mb-4" do %>
-        <%= check_box_tag "default_billing", "true", @address.user_default_billing?,
-          class: 'input-checkbox input-address-default',
-          disabled: @address.user_default_billing? %>
-        Set as default billing address
+        <%= check_box_tag "default_billing", "true", @address.user_default_billing?, class: 'input-checkbox input-address-default', disabled: @address.user_default_billing? %>
+        <%= Spree.t('address_book.set_as_default_billing_address') %>
       <% end %>
-      <div class="border-t border-default pt-4 flex justify-end gap-8 ">
-        <%= button_tag Spree.t(:cancel), class: 'uppercase text-sm font-semibold', data: { action: 'click->modal#close' } %>
-        <%= f.submit Spree.t(:save), class: 'btn-primary w-48' %>
-      </div>
-    <% end %>
-  </div>
+    </div>
+    <div class="border-t border-default px-8 py-4 flex justify-end gap-8 shrink-0">
+      <%= button_tag Spree.t(:cancel), class: 'uppercase text-sm font-semibold', data: { action: 'click->modal#close' } %>
+      <%= f.submit Spree.t(:update), class: 'btn-primary w-48' %>
+    </div>
+  <% end %>
 </div>
