--- a/storefront/app/views/themes/default/spree/account/addresses/index.html.erb
+++ b/storefront/app/views/themes/default/spree/account/addresses/index.html.erb
@@ -13,8 +13,10 @@
           </ul>
         <div class="flex">
           <div data-controller="modal" data-modal-allow-background-close="true">
-            <%= link_to Spree.t(:add_address), spree.new_address_path, class: 'btn-primary block w-full lg:w-auto',  data: { action: "click->modal#open", turbo_frame: :new_address_modal } %>
+            <%= button_tag Spree.t(:add_address), type: "button", class: "btn-primary block w-full lg:w-auto", data: { action: "click->modal#open" } %>
             <%= turbo_frame_tag :new_address_modal, 
+                  src: spree.new_address_path,
+                  loading: :lazy,
                   data: { 
                     modal_target: "container", 
                     action: "click->modal#closeBackground keyup@window->modal#closeWithKeyboard" 
@@ -28,8 +30,10 @@
           <p><%= Spree.t('storefront.account.no_addresses_description') %></p>
           <div class="flex mt-8 justify-center">
             <div data-controller="modal" data-modal-allow-background-close="true">
-              <%= link_to Spree.t(:add_address), spree.new_address_path, class: 'btn-primary block',  data: { action: "click->modal#open", turbo_frame: :new_address_modal } %>
-              <%= turbo_frame_tag :new_address_modal, 
+              <%= button_tag Spree.t(:add_address), type: "button", class: "btn-primary block", data: { action: "click->modal#open" } %>
+              <%= turbo_frame_tag :new_address_modal,
+                    src: spree.new_address_path,
+                    loading: :lazy,
                     data: { 
                       modal_target: "container", 
                       action: "click->modal#closeBackground keyup@window->modal#closeWithKeyboard" 
