--- a/storefront/app/views/themes/default/spree/account/addresses/_new_address_modal.html.erb
+++ b/storefront/app/views/themes/default/spree/account/addresses/_new_address_modal.html.erb
@@ -1,5 +1,5 @@
 <div class="bg-white h-[90vh] lg:h-[70vh] w-full lg:w-1/3 flex flex-col overflow-hidden">
-  <%= form_for @address, html: { class: "flex flex-col h-full" } do |f| %>
+  <%= form_for @address, html: { class: "flex flex-col h-full", data: { turbo_frame: "_top" } } do |f| %>
     <div class="px-8 py-6 border-b shrink-0">
       <div class="flex justify-between items-center">
         <h3 class="text-xl lg:text-2xl font-medium lg:font-semibold capitalize">
@@ -31,7 +31,8 @@
     </div>
     <div class="border-t border-default px-8 py-4 flex justify-end gap-8 shrink-0">
       <%= button_tag Spree.t(:cancel), class: 'uppercase text-sm font-semibold', data: { action: 'click->modal#close' } %>
-      <%= f.submit Spree.t(:add_address), class: 'btn-primary w-48' %>
+      <%= hidden_field_tag :from_modal, "true" %>
+      <%= f.submit Spree.t(:add), class: 'btn-primary w-48' %>
     </div>
   <% end %>
 </div>
