--- a/admin/app/views/layouts/spree/minimal.html.erb
+++ b/admin/app/views/layouts/spree/minimal.html.erb
@@ -8,7 +8,7 @@
       <div class="row bg-white">
         <div
           class="col-lg-5 d-none d-lg-flex bg-light min-vh-100"
-          style="background-image: url('<%= asset_path('login_sidebar_background.png') %>');background-repat: no-repat;background-size: cover;background-position: center')"
+          style="background-image: url('<%= asset_path('login_sidebar_background.png') %>');background-repeat: no-repeat;background-size: cover;background-position: center')"
         >
         </div>
         <div class="col-lg-6 col-xl-4 offset-xl-1 py-3 d-flex flex-column justify-content-center vh-100">
