Update storefront for open sourcing analytics

--- a/storefront/app/views/spree/line_items/destroy.turbo_stream.erb
+++ b/storefront/app/views/spree/line_items/destroy.turbo_stream.erb
@@ -5,6 +5,8 @@
     <% else %>
       <%= render 'spree/orders/cart' %>
     <% end %>
+
+    <%= render_storefront_partials(:remove_from_cart_partials) %>
   <% end %>
 <% end %>
 
