CHG add redirect to taxonomies edit

--- a/admin/app/views/spree/admin/taxonomies/_taxonomy.html.erb
+++ b/admin/app/views/spree/admin/taxonomies/_taxonomy.html.erb
@@ -3,7 +3,7 @@
     <%= icon('grip-vertical', class: 'rounded hover-gray p-2') %>
   </td>
   <td class="w-50 cursor-pointer py-0" data-action="click->row-link#openLink">
-    <%= link_to taxonomy.name, spree.admin_taxonomy_taxon_path(taxonomy, taxonomy.root.id), class: 'text-decoration-none d-flex align-items-center font-weight-bold text-dark', data: { row_link_target: :link } %>
+    <%= link_to taxonomy.name, spree.admin_taxonomy_path(taxonomy), class: 'text-decoration-none d-flex align-items-center font-weight-bold text-dark', data: { row_link_target: :link } %>
   </td>
   <td class="w-30 cursor-pointer" data-action="click->row-link#openLink">
     <!-- We don't want to include the root taxon -->
@@ -11,6 +11,6 @@
   </td>
   <td class="w-10 actions">
     <%= link_to_with_icon 'list-tree', Spree.t('admin.manage_taxons'), spree.admin_taxonomy_path(taxonomy), class: 'btn btn-light btn-sm' %>
-    <%= link_to_edit(taxonomy.root, url: spree.edit_admin_taxonomy_taxon_path(taxonomy, taxonomy.root.id), class: 'btn btn-light btn-sm') if can?(:edit, taxonomy.root) %>
+    <%= link_to_edit(taxonomy, class: 'btn btn-light btn-sm') if can?(:edit, taxonomy) %>
   </td>
 </tr>
